@@ -270,10 +270,22 @@ class PloneOrderSupportTests(TestCase):
         self.assertEqual(self.folder.getObjectPosition('baz'), 1)
         self.assertEqual(self.folder.getObjectPosition('foo'), 2)
 
+    def testOrderObjectsReverse(self):
+        self.folder.orderObjects('id', reverse=True)
+        self.assertEqual(self.folder.getObjectPosition('foo'), 0)
+        self.assertEqual(self.folder.getObjectPosition('baz'), 1)
+        self.assertEqual(self.folder.getObjectPosition('bar'), 2)
+
     def testOrderObjectsByMethod(self):
         self.folder.orderObjects('dummy_method')
         self.assertEqual(self.folder.getObjectPosition('bar'), 0)
         self.assertEqual(self.folder.getObjectPosition('baz'), 1)
+        self.assertEqual(self.folder.getObjectPosition('foo'), 2)
+
+    def testOrderObjectsOnlyReverse(self):
+        self.folder.orderObjects(reverse=True)
+        self.assertEqual(self.folder.getObjectPosition('baz'), 0)
+        self.assertEqual(self.folder.getObjectPosition('bar'), 1)
         self.assertEqual(self.folder.getObjectPosition('foo'), 2)
 
     def testSubsetIds(self):
