@@ -223,12 +223,18 @@ class PartialOrderingIntegrationTests(ZopeTestCase):
         foo.orderObjects('id', reverse=True)
         self.assertEqual(foo.objectIds(), ['bar3', 'bar2', 'bar1'])
         self.failUnless(foo in self.registered, 'not registered?')
+        # Reverse the current ordering.
+        foo.orderObjects(reverse=True)
+        self.assertEqual(foo.objectIds(), ['bar1', 'bar2', 'bar3'])
 
     def testOrderObjectsByMethodChangesOrderInfo(self):
         foo = self.app.foo
         foo.orderObjects('dummy_method', reverse=True)
         self.assertEqual(foo.objectIds(), ['bar3', 'bar2', 'bar1'])
         self.failUnless(foo in self.registered, 'not registered?')
+        # Reverse the current ordering.
+        foo.orderObjects(reverse=True)
+        self.assertEqual(foo.objectIds(), ['bar1', 'bar2', 'bar3'])
 
 
 def test_suite():
